--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@
         background-position: 50% 20%;
     }
 
-    .main-visual-content{
+    .main-visual-content {
         width: 40%;
         height: 300px;
         background-color: rgba(0, 0, 0, 0.637);
@@ -51,4 +51,9 @@
         color: #fff;
     }
 
-//home.html
+    .col-6-master {
+        background: image-url('master.png');
+        width: 50%;
+        height: 350px;
+        background-size: cover;
+    }
