--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,20 +1,28 @@
 <br>
-<div class="text-center random-theme-1">
-    <% @random.each do |t| %>
-        <div>
-            <%= attachment_image_tag t, :image, size:"280x250", fallback: "no_image.jpg", class: "img-thumbnail" %><br><br>
-            <%= link_to "このテーマでカクテルを作ってみる", new_theme_post_path(t.id), class:"btn btn-dark", type: "button" %>
+<h3 class="text-center"><strong>マスターのおまかせテーマ</strong></h3><br>
+<div class="row">
+    <div class="col-6-master">
+    </div>
+    <div class="col-6">
+        <div class="text-center random-theme-1">
+            <% @random.each do |t| %>
+                <div>
+                    <%= attachment_image_tag t, :image, size:"300x280", fallback: "no_image.jpg", class: "img-thumbnail" %><br><br>
+                    <%= link_to "このテーマでカクテルを作ってみる", new_theme_post_path(t.id), class:"btn btn-dark", type: "button" %>
+                </div>
+            <% end %>
         </div>
-    <% end %>
+    </div>
 </div>
+<br>
 <br>
 <div class="new-post-top6">
     <div class="text-center">
-    <h3><strong>みんなの新しい投稿</strong></h3><br>
+    <h3><strong>新着投稿</strong></h3>
         <div class="row">
             <% @new_posts.each do |n| %>
                 <div class="col-4 mb-1">
-                    <%= link_to theme_post_path(n.theme.id, n.id) do %><%= attachment_image_tag n, :image, size:"200x200", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
+                    <%= link_to theme_post_path(n.theme.id, n.id) do %><%= attachment_image_tag n, :image, size:"150x150", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
                     <% end %>
                     <font color=red>New</font> <%= n.name %><br>
                     <i class="far fa-star fa-fw star-color"></i><%= n.favorites.count%>
@@ -33,7 +41,7 @@
                     <tr>
                         <td>
                             <strong>No.<%= i %></strong> 
-                            <i class="far fa-star fa-fw star-color"><%= post.favorites.count%></i>
+                            <i class="far fa-star fa-fw"><%= post.favorites.count %></i>
                             <%=link_to theme_post_path(post.theme.id, post.id) do %>
                             <%= post.name %>
                         </td>
@@ -49,7 +57,9 @@
             <% @user_ranks.each.with_index(1) do |user, u| %>
                 <table class="table">
                     <tr>
-                        <td><strong>No.<%= u %></strong> <%= link_to user_path(user.id) do%><%= user.name %></td>
+                        <td><strong>No.<%= u %></strong>
+                        <i class="far fa-thumbs-up fa-fw"><%= user.followers.count %></i>
+                        <%= link_to user_path(user.id) do%><%= user.name %></td>
                         <% end %>
                     </tr>
                 </table>
