--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         </li>
         <li class="nav-item">
           <div class="nav-link">
-            <i class="fas fa-wine-bottle fa-fw"></i><%= link_to "お題", themes_path, :style=>"color:white;" %>
+            <i class="fas fa-wine-bottle fa-fw"></i><%= link_to "テーマ", themes_path, :style=>"color:white;" %>
           </div>
         </li>
         <% if user_signed_in? %>
@@ -66,7 +66,7 @@
         <p class="main-visual-text">
         <h3>ようこそ <strong>Blend</strong> へ</h3><br>       
         テーマに合わせてじぶんだけのオリジナルカクテルを作ろう！<br>
-        めざせベストバーテンダー！
+        めざせBest bartender!
         </p>
       </div>
     </div>
