--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,9 +16,6 @@
                     <td>カクテル投稿数 <i class="fas fa-cocktail fa-fw"></i><%= @user.posts.count %></td>
                 </tr>
                 <tr>
-                    <td>いいねをもらった数 <i class="far fa-star fa-fw"><%= @user.favorites.count %></td>
-                </tr>
-                <tr>
                     <td>評価された数 <i class="far fa-thumbs-up fa-fw"></i><%= @user.followers.count %></td>
                 </tr>
                 <tr>
@@ -50,9 +47,9 @@
                 <%= link_to theme_post_path(:theme_id => post.theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"140x140", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
                     <% end %>
                 <%= post.name %><br>
-                <i class="far fa-star fa-fw star-color"></i></span><%= post.favorites.count%>
-                <% if current_user != @user %>
-                    <% link_to user_path(@user), method: :delete, class:"btn btn-danger" %>
+                <i class="far fa-star fa-fw star-color"></i></span><%= post.favorites.count%><br>
+                <% if current_user.id == post.user.id %>
+                    <%= link_to "削除", theme_post_path(:theme_id => post.theme.id, :id => post.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class:"btn btn-danger" %>
                 <% end %>
             </div>
         <% end %>
