--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,11 @@
         height: 350px;
         background-size: cover;
     }
+
+    .about-img {
+        background: image-url('about-img');
+        width: 100%;
+        height: 300px; 
+        background-size: cover;
+        background-position: 50% 90%;
+    }
