--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,17 @@
-aboutページだよー
+<br>
+    <h1 class="text-center">How to <strong>Blend</strong></h1><br>
 
-なんか説明でも書こうかなー
+    <div class="about-img"></div>
+    <br><br>
+    あなたがまだ小さい頃、ドリンクバーなどでいろんな飲み物を混ぜてオリジナルドリンクを作った事はありませんか？<br>
+    <br>
+    その時、奇跡が起きてすごく美味しいドリンクが完成した事もあるかと思います。<br>
+    <br>
+    このサイトは、あの頃の気持ちや楽しさを大人になってもみんなで楽しもうというコンセプトで作られています。<br>
+    <br>
+    あなたの独創性で溢れた素晴らしいオリジナルカクテルをみんなが知りたがっています。<br>
+    <br><br>
+    <h3 class="text-center"><strong>さぁ、シェイカーを手に取り<br>私たちにあなたのカクテルを教えてください。</strong></h3>
+    <br>
+    <br>
+    <br>
