--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,11 @@
 <br>
 <div class="row">
-    <div class="col-6">
-        <div class="text-center">
-            <%= attachment_image_tag @post, :image, :fill, 230, 200, size:"300x300", fallback: "no_image.jpg", class: "img-thumbnail" %>
+    <div class="col-6 text-center">
+        <%= attachment_image_tag @post, :image, :fill, 230, 200, size:"300x300", fallback: "no_image.jpg", class: "img-thumbnail" %>
+        <div class="post-tag">
+            <% @post.tags.each do |tag| %>
+                <span class="badge badge-pill badge-primary"><%= tag.name %></span>
+            <% end %>
         </div>
     </div>
     <div class="col-6">
