--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,3 +65,12 @@
         background-size: cover;
         background-position: 50% 90%;
     }
+
+    .comment-table {
+        margin-bottom: 0px;
+    }
+
+    .comment {
+        background-color: rgba(255, 255, 255, 0.733);
+        padding: 40px;
+    }
