--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -68,20 +68,57 @@
         </div>
     </div>
 </div>
-<div class="post-comment">
+<br>
+<br>
+<div class="comment">
+    <h3 class="text-center">みんなのコメント</h3>
+    <br>
     <div class="row">
-        <div class="comment-area">
-            <%= form_for @post_comment, url: theme_post_post_comments_path(@post.theme.id, @post.id), method: :post do |f| %>
-                <div class="col-xs-12">
-                    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+        <div class="col-12">
+            <div class="row">
+                <div class="col">
+                    <div class="comment-area">
+                        <%= form_for @post_comment, url: theme_post_post_comments_path(@post.theme.id, @post.id), method: :post do |f| %>
+                            <div class="col">
+                                <%= f.text_area :comment, :size=>"10x3", placeholder:"感想をここに入力", class:"form-control" %>
+                            </div>
+                            <br>
+                            <div class="text-center">
+                                <%= f.submit "コメントする", class:"btn btn-dark" %>
+                            </div>
+                            <br>
+                        <% end %>
+                    </div>
                 </div>
-                <%= f.submit "コメントする" %>
-            <% end %>
+            </div>
+        </div>  
+    </div>         
+    <div class="row">
+        <div class="col-12">
+            <div class="row">
+                <div class="col">
+                    <% @post.post_comments.each do |post_comment| %>
+                        <table class="table comment-table">
+                            <tr>
+                                <td>
+                                    <%= link_to user_path(post_comment.user.id) do %>
+                                    <%= attachment_image_tag post_comment.user, :image, size:"50x50", fallback: "no_image.jpg", class: "img-thumbnail" %>
+                                    <% end %>
+                                    <%= post_comment.comment %>
+                                </td>
+
+                                <% if current_user.id == post_comment.user.id %>
+                                    <td><%= link_to "削除", theme_post_post_comment_path(@post.theme.id, @post.id, post_comment.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class:"btn btn-danger btn-sm" %></td>
+                                    <% else %>
+                                    <td></td>
+                                <% end %>
+                            </tr>
+                        </table>
+                    <% end %>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <% @post.post_comments.each do |post_comment| %>
-        <%= post_comment.comment %>
-        <% end %>
-    </div>
 </div>
+<br>
+<br>
